Update info about package

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "gulp-tasks",
-  "version": "0.2.1",
+  "name": "gulp-tasks-ts",
+  "version": "0.0.1",
   "description": "Gulp tasks for ES6/Babel based projects",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "dist": "babel src -m umd -d dist"
   },
