--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "dist": "babel src -m umd -d dist"
+    "dist": "tsc -p src"
   },
   "repository": {
     "type": "git",
@@ -47,6 +47,8 @@
     "vinyl-paths": "~2.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "~4.1.3"
+    "babel-eslint": "~4.1.3",
+    "tslint": "~2.5.1",
+    "typescript": "~1.6.2"
   }
 }
