--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "babel-eslint": "~4.1.3",
+    "eslint": "~1.7.3",
     "tslint": "~2.5.1",
     "typescript": "~1.6.2"
   }
