--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-rev": "~6.0.1",
     "gulp-rev-replace": "~0.4.2",
     "gulp-sass": "~2.0.4",
+    "gulp-tslint": "~3.4.0",
     "gulp-uglify": "~1.4.2",
     "gulp-util": "~3.0.6",
     "jspm": "~0.16.12",
