--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
   },
   "homepage": "https://github.com/gsong/gulp-tasks#readme",
   "dependencies": {
-    "browser-sync": "~2.9.11",
-    "del": "~2.0.2",
-    "gh-pages": "~0.4.0",
+    "browser-sync": "~2.10.0",
+    "del": "~2.1.0",
+    "gh-pages": "~0.5.0",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-changed": "~1.3.0",
     "gulp-filter": "~3.0.1",
     "gulp-gzip": "~1.2.0",
     "gulp-html-replace": "~1.5.4",
-    "gulp-imagemin": "~2.3.0",
-    "gulp-load-plugins": "~1.0.0-rc.1",
+    "gulp-imagemin": "~2.4.0",
+    "gulp-load-plugins": "~1.1.0",
     "gulp-minify-html": "~1.0.4",
     "gulp-ng-annotate": "~1.1.0",
     "gulp-notify": "~2.2.0",
@@ -40,16 +40,16 @@
     "gulp-rev": "~6.0.1",
     "gulp-rev-replace": "~0.4.2",
     "gulp-sass": "~2.1.0",
-    "gulp-tslint": "~3.4.0",
-    "gulp-uglify": "~1.4.2",
+    "gulp-tslint": "~3.6.0",
+    "gulp-uglify": "~1.5.1",
     "gulp-util": "~3.0.6",
     "jspm": "~0.16.12",
     "run-sequence": "~1.1.4",
-    "vinyl-paths": "~2.0.0"
+    "vinyl-paths": "~2.1.0"
   },
   "devDependencies": {
     "babel-eslint": "~4.1.3",
-    "eslint": "~1.7.3",
+    "eslint": "~1.9.0",
     "tslint": "~2.5.1",
     "typescript": "~1.6.2"
   }
